[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["Zach Hornung <Zachhornung@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
